--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   width: 100%;
   height: 10%;
   background-color: red;
   display:flex;
+}
+
+.logo {
+  width: 25%;
+  height: 100%;
+  background-color: blue;
+}
+
+.menu {
+  width: 75%;
+  height: 100%;
+  background-color: green;
 }
