--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,14 @@
 
 .menu .menubar {
   height: 100%;
-  width: 100%'; 
+  width: 100%; 
 }
 
 .menu .menubar ul {
   width: 100%;
   height: 100%;
   display:flex;
-  
+  justify-content: space-around;
 }
 
 .menu .mobilebar {
