--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 
 .header {
   width: 100%;
-  height: 80px;              /* 10% ki jagah fixed height better */
+  height: 10%;
   background-color: red;
-  display: flex;
+  display:flex;
 }
 
 .logo {
@@ -19,14 +19,13 @@
 .logo a {
   height: 100%;
   width: 100%;
-  display: flex;
+  display:flex;
   justify-content: center;
-  align-items: center;
 }
 
 .logo a img {
-  max-width: 80%;
-  max-height: 80%;
+  width: auto;
+  height: auto;
 }
 
 .menu {
@@ -35,67 +34,34 @@
   background-color: green;
 }
 
-/* sirf TOP LEVEL ul ko flex banaao */
-.menu .menubar > ul {
+.menu .menubar {
+  height: 100%;
+  width: 100%; 
+}
+
+.menu .menubar ul {
   width: 100%;
   height: 100%;
-  display: flex;
+  display:flex;
   justify-content: space-around;
   align-items: center;
 }
 
-/* common li */
 .menubar ul li {
   list-style: none;
-  position: relative;           /* submenu iske relative position pe open hoga */
+  padding-bottom: 3%;
 }
 
-/* TOP LEVEL LINKS */
-.menubar > ul > li > a {
+.menubar ul li a {
   text-decoration: none;
   color: magenta;
   font-size: 1.5vw;
-  /* position: absolute;  <-- ye hatao, ye hi layout bigaad raha tha */
-  padding: 4px 8px;
-  white-space: nowrap;          /* line break na ho */
-}
-
-/* SUBMENU UL */
-.submenu {
   position: absolute;
-  top: 100%;                    /* parent li ke just niche */
-  left: 0;
-  background: #fff;
-  min-width: 160px;
-  display: none;                /* by default hidden */
-  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-  z-index: 999;
-}
-
-/* submenu items vertically */
-.submenu li {
-  padding: 0;                   /* remove extra bottom padding */
-}
-
-.submenu li a {
-  display: block;
-  padding: 8px 12px;
-  font-size: 14px;
-  color: #333;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-.submenu li a:hover {
-  background: #eee;
-}
-
-/* HOVER pe submenu dikhana */
-.menubar ul li:hover > .submenu {
-  display: block;
 }
 
 .menu .mobilebar {
   height: 100%;
   width: 0%;
 }
+
+
