--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,10 @@
 
 .submenu {
   position: absolute;
-  top: 10%;
+  top: 0%;
   left: 0;
-  background: white;
+  background: #fff;
   min-width: 160px;
-  padding: 4px 0;
-  list-style: none;
   display: none;
   z-index: 999;
   box-shadow: 0 2px 6px rgba(0,0,0,0.25);
@@ -82,19 +80,18 @@
 }
 
 .submenu li a {
-  position: static;
   display: block;
-  padding: 6px 12 px;
-  color: black;
+  padding: 8px 12 px;
+  color: #333;
   font-size: 0.5vw;
   text-decoration: none;
-  white-space: no-wrap;
+  white-space: nowrap;
+}
+
+.submenu li a:hover {
+  background:#eee;
 }
 
 .menubar li a:hover .submenu {
   display: block;
-}
-
-.menubar ul li a .submenu ul li {
-  min-height: 32px;
 }
