--- a/css/style.css
+++ b/css/style.css
@@ -68,16 +68,20 @@
   display: none;
   position: absolute;
   background-color: magenta;
-  min-width: 25%;
+  min-width: 120px;
   border: 1px solid black;
   /* padding-left: 5px; */
   z-index: 10;
 }
 
+.submenu ul {
+  display:flex;
+  flex-direction: column;
+}
+
 .submenu ul li {
   list-style: none;
   padding: 5px 10px;
-  text-align: left;
 }
 
 .submenu ul li a{
