--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,118 @@
-* {
-  margin: 0;
-  padding: 0;
+*{
+        margin:0;
+        padding:0;
+}
+.navbar{
+        width:100%;
+        height:7%;
+        display:flex;
+}
+.logo{
+        width:25%;
+        background:linear-gradient(to left top,aqua,white);
+}
+.logo a{
+        width:100%;
+        height:100%;
+        display:flex;
+        justify-content:center;
+}
+.logo a img{
+        width:auto;
+        height:auto;
+}
+.menu{
+        width:75%;
+        display:flex;
+        background:linear-gradient(to right top,aqua,white);
+}
+.menu .menubar{
+        height:100%;
+        width:80%;
+}
+.menu .menubar ul{
+        height:100%;
+        width:100%;
+        display:flex;
+        align-items:center;
+        justify-content:space-around;
+}
+.menu ul li{
+        list-style-type:none; 
+        padding-bottom:2.5%;
+        position:relative;
+}
+.menu ul li a{
+        text-decoration:none;
+        color:black;
+        font-size:1.2vw;
+        position:absolute;
 }
 
-.header {
-  width: 100%;
-  height: 10%;
-  background-color: red;
-  display:flex;
+.menu .menuicon{
+        width:20%;
+        height:100%;
+        background:linear-gradient(to left top,aqua,white);
+        
 }
-
-.logo {
-  width: 25%;
-  height: 100%;
-  background-color: blue;
+.menu .menuicon .icon{
+        width:100%;
+        height:100%;
 }
-
-.logo a {
-  height: 100%;
-  width: 100%;
-  display:flex;
-  justify-content: center;
+.menu .menuicon .icon i{
+        /* font-size:2vw; */
+        display:none;
 }
+/* ------------submenu---------- */
 
-.logo a img {
-  width: auto;
-  height: auto;
+.menu .menubar ul li .submenu{
+            display:none;
+            position:absolute;
+            top:100%;
+            left:0;
+            width:150px;
+            background:red;
+            flex-direction:column;
+            padding:5px 0;
+            z-index:99;
+       
 }
+.submenu li{
+            padding:8px;
+            list-style:none;
+        }
 
-.menu {
-  width: 75%;
-  height: 100%;
-  background-color: green;
+ .submenu li a{
+            font-size:16px;
+        }
+
+.menubar ul li:hover .submenu{
+            display:block;
+        }
+
+
+
+@media (max-width:576px){
+        .navbar{
+                width:100%;
+                height:5%;
+                display:flex;
 }
-
-.menu .menubar {
-  height: 100%;
-  width: 100%; 
+        .menu ul li a{
+                font-size:2vw;
+        }   
 }
+@media (max-width:400px){
 
-.menu .menubar ul {
-  width: 100%;
-  height: 100%;
-  display:flex;
-  justify-content: space-around;
-  align-items: center;
+.menu .menuicon .icon{
+        display:flex;
+        justify-content:center;
+        align-items:center;
 }
-
-.menubar ul li {
-  list-style: none;
-  padding-bottom: 3%;
-}
-
-.menubar ul li a {
-  text-decoration: none;
-  color: magenta;
-  font-size: 1.5vw;
-  position: absolute;
-}
-
-.menu .mobilebar {
-  height: 100%;
-  width: 0%;
-}
-
-.menu .menubar ul li .submenu {
-  display: none;
-  position: absolute;
-  background-color: magenta;
-  border: 1px solid black;
-  width: 120px;
-  /* padding-left: 5px; */
-  z-index: 10;
-}
-
-.menu .menubar ul li .submenu li {
-  list-style: none;
-  padding: 5px 10px;
-}
-
-.menu .menubar ul li .submenu li a{
-  color: black;
-  font-size: 1vw;
-  text-decoration: none;
-  position: relative; 
-}
-
-.menubar ul li:hover .submenu {
-  display: block;
+ .menu .menuicon .icon i{
+        display:block;
+        font-size:5vw;
+        padding-top:3%;
+        align-items:center;
+        }
 }
