--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@
             display:block;
         }
 
-.underline_current > a {
+.menu .menubar ul .underline_current > a {
         text-decoration: underline;
         text-decoration-color: red;
 }
