--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,76 @@
-*{
-    margin:0;
-    padding:0;
-}
-.navbar{
-    width:100%;
-    height:10%;
-    display:flex;
-}
-.logo{
-    width:25%;
-    background:red;
-}
-.logo a{
-    width:100%;
-    height:100%;
-    display:flex;
-    justify-content:center;
-}
-.logo a img{
-    width:auto;
-    height:auto;
-}
-.menu{
-    width:75%;
-    display:flex;
-    background:blue
-}
-.menu .menubar{
-    height:100%;
-    width:80%;
-}
-.menu .menubar ul{
-    height:100%;
-    width:100%;
-    display:flex;
-    align-items:center;
-    justify-content:space-around;
-}
-.menu ul li{
-    list-style:none; 
-    padding-bottom:3.5%;
-    position:relative;
-}
-.menu ul li a{
-    text-decoration:none;
-    color:white;
-    font-size:1.2vw;
-    position:absolute;
-    height:5%;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-/* ------------submenu---------- */
-
-.menu .menubar ul li .submenu{
-    display:none;
-    position:absolute;
-    top:100%;
-    left:0;
-    width:150px;
-    background:red;
-    flex-direction:column;
-    padding:5px 0;
-    z-index:99;
-       
-}
-.submenu li{
-    padding:8px;
-    list-style:none;
+.header {
+  width: 100%;
+  height: 10%;
+  background-color: red;
+  display:flex;
 }
 
-.submenu li a{
-    font-size:16px;
+.logo {
+  width: 25%;
+  height: 100%;
+  background-color: blue;
 }
 
-.menubar ul li:hover .submenu{
-    display:block;
+.logo a {
+  height: 100%;
+  width: 100%;
+  display:flex;
+  justify-content: center;
+}
+
+.logo a img {
+  width: auto;
+  height: auto;
+}
+
+.menu {
+  width: 75%;
+  height: 100%;
+  background-color: green;
+}
+
+.menu .menubar {
+  height: 100%;
+  width: 100%; 
+}
+
+.menu .menubar ul {
+  width: 100%;
+  height: 100%;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.menubar ul li {
+  list-style: none;
+  padding-bottom: 3%;
+}
+
+.menubar ul li a {
+  text-decoration: none;
+  color: magenta;
+  font-size: 1.5vw;
+  position: absolute;
+}
+
+.menu .mobilebar {
+  height: 100%;
+  width: 0%;
+}
+
+.menu .menubar ul li .submenu {
+  display: none;
+  position: absolute;
+  background-color: magenta;
+  border: 1px solid black;
+  /* padding-left: 5px; */
+  z-index: 10;
 }
 
 .menu .menubar ul .underline_current > a {
