--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,8 @@
   position: absolute;
   background-color: magenta;
   border: 1px solid black;
+  width: 120px;
+  height: auto;
   /* padding-left: 5px; */
   z-index: 10;
 }
