--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,25 @@
 .menu .menubar ul li .submenu {
   display: none;
   position: absolute;
+  top:100%;
+  left:0;
   background-color: magenta;
   border: 1px solid black;
   width: 120px;
   height: auto;
+  flex-direction:column;
+  padding:5px 0;
   /* padding-left: 5px; */
   z-index: 10;
+}
+
+.submenu li{
+  padding:8px;
+     list-style:none;
+  }
+
+.submenu li a{
+    font-size:16px;
 }
 
 .menu .menubar ul li:hover .submenu {
