--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@
   position: absolute;
   top:100%;
   left:0;
-  background-color: magenta;
+  background: magenta;
   border: 1px solid black;
   width: 120px;
   height: auto;
@@ -81,8 +81,8 @@
 
 .submenu li{
   padding:8px;
-     list-style:none;
-  }
+  list-style:none;
+}
 
 .submenu li a{
     font-size:16px;
