--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,13 @@
   height: auto;
   flex-direction:column;
   padding:5px 0;
-  /* padding-left: 5px; */
   z-index: 10;
 }
 
 .menu .menubar ul li .submenu li{
   padding:8px;
   list-style:none;
+  padding-bottom: 2%;
 }
 
 .menu .menubar ul li .submenu li a{
