--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,22 @@
     text-decoration: underline;
     text-decoration-color: red;
 }
+
+@media (max-width: 768px) {
+  .menu .menubar ul {
+    display:none;
+    flex-direction: column;
+  }
+
+  .menu .menubar ul li {
+    padding: 5px;
+  }
+
+  .menu .menubar ul li a {
+    position: static !important;
+    font-size: 5vw;
+    display: inline-block;
+  }
+
+  
+}
