--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,9 @@
   }
 
   .menu .mobilebar .hamburger {
-    width: 44px;
-    height: 44px;
-    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    /* border-radius: 6px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,7 +166,7 @@
     display: flex;
     background: rgba(255,255,255,0.98);
     position: absolute;
-    top: 100%;
+    top: 10%;
     left: 0;
     right: 0;
     z-index: 999;
