--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 
 .menu .menubar ul {
   width: 100%;
-  height: 100%;
+  height: auto;
   display:flex;
   justify-content: space-around;
   align-items: center;
@@ -119,8 +119,15 @@
   }
   
   .menu .menubar ul {
-    display:none;
-    flex-direction: column;
+    /* iska koi impact nhi padega
+      but need to show the impact
+      to kids to understand the 
+      visibility of the menu */
+    /* display:none;
+    flex-direction: column; */
+    top: 0%;
+    padding: 0px;
+    width:100%;
   }
 
   .menu .menubar ul li {
@@ -129,7 +136,6 @@
 
   .menu .menubar ul li a {
     position: static !important;
-    font-size: 5vw;
     display: inline-block;
   }
 
@@ -186,6 +192,11 @@
     display: none;
     padding: 8px 0;
     box-shadow: none;
+  }
+
+  .menu .menubar ul li .submenu li {
+    padding: 0px;
+    padding-bottom: 0px;
   }
 
   .menu .menubar ul li.open-submenu > .submenu {
