--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
 }
 
 .menu .menubar ul li .submenu li a{
-    font-size:16px;
+    font-size:1vw;
     color: white;
 }
 
@@ -188,11 +188,12 @@
     display: none;
     padding: 8px 0;
     box-shadow: none;
-  }
-
-  .menu .menubar ul li .submenu li {
     padding: 0px;
     padding-bottom: 0px;
+  }
+
+  .menu .menubar ul li .submenu li a {
+    font-size: 1.5vw;
   }
 
   .menu .menubar ul li.open-submenu > .submenu {
