--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@
   background: magenta;
   border: 1px solid black;
   width: 120px;
+  left: -5%;
   height: auto;
   flex-direction:column;
   padding:5px 0;
