--- a/css/style.css
+++ b/css/style.css
@@ -50,14 +50,22 @@
 .menubar ul li {
   list-style: none;
   padding-bottom: 3%;
+  height: 100%;  
+  display: flex;
+  align-items: center;
 }
 
 .menubar ul li a {
   text-decoration: none;
   color: magenta;
   font-size: 1.5vw;
-  position: absolute;
-  height: 7%;
+  /* position: absolute; */
+  /* height: 7%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  position: static !important;
 }
 
 .menu .mobilebar {
