--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 
 .menubar ul li {
   list-style: none;
-  padding-bottom: 3%;
+  /* padding-bottom: 3%; */
   height: 100%;  
   display: flex;
   align-items: center;
