--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,10 @@
 .menu .menubar ul li .submenu {
   display: none;
   position: absolute;
-  top:10%;
+  /* top:10%; */
+  top: 100%;              /* parent ke bilkul neeche */
+  left: 50%;              /* center point */
+  transform: translateX(-50%); /* center alignment fix */
   background: magenta;
   border: 1px solid black;
   width: 120px;
