--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
   top:10%;
   background: magenta;
   border: 1px solid black;
-  width: 120px;
+  width: 20%;
   height: auto;
   flex-direction:column;
   padding:5px 0;
