--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
   top:10%;
   background: magenta;
   border: 1px solid black;
-  width: 20%;
+  width: 15%;
   height: auto;
   flex-direction:column;
   padding:5px 0;
@@ -90,11 +90,19 @@
   padding:8px;
   list-style:none;
   padding-bottom: 10%;
+  padding: 8px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
 
 .menu .menubar ul li .submenu li a{
   font-size:1vw;
   color: white;
+  text-align: center;      /* NEW: fallback text centering */
+  display: inline-block;
+  width: 100%;
 }
 
 .menu .menubar ul li:hover .submenu {
