--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@
     left: 0;
     transform: none !important;
     width: 100%;
-    background: #f3cbe6; /* softer magenta */
+    background: black;
     display: none;
     padding: 0px;
     box-shadow: none;
