--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,55 @@
     text-decoration: underline;
     text-decoration-color: red;
 }
+
+@media (max-width: 576px) {
+  .header {
+    height: 5%;
+    background: white;
+  }
+
+  .header .logo {
+    width: 50%;
+    background-color: white;
+  }
+
+  .header .logo a {
+    width: 50%;
+    background-color: white;
+    justify-content: none;
+    padding-left: 20%;
+  }
+
+  .header .menu {
+    width: 50%;
+    background-color: white;
+  }
+
+  .header .menu .menubar{
+    width: 0%;
+    height: 0%;
+  }
+
+  .header .menu .mobilebar {
+    width: 100%;
+    height: 100%;
+  }
+
+
+
+
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+        
