--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,24 @@
     height: 100%;
   }
 
+  .header .menu .mobilebar .hamburger {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background:green;
+  }
+
+  .header .menu .mobilebar .hamburger span {
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: white;
+    border-radius: 2px;
+    box-shadow: 0 7px 0 white, 0 -7px 0 white;
+  }
 
 
 
