--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@
   }
 
   .header .logo {
-    width: 50%;
+    width: 80%;
     background-color: white;
   }
 
@@ -135,7 +135,7 @@
   }
 
   .header .menu {
-    width: 50%;
+    width: 20%;
     background-color: white;
   }
 
@@ -153,9 +153,9 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+    justify-content: right;
+    align-items: right;
+    /* cursor: pointer; */
     background:green;
   }
 
