--- a/css/style.css
+++ b/css/style.css
@@ -153,9 +153,9 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: right;
-    align-items: right;
-    /* cursor: pointer; */
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     background:green;
   }
 
