--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,6 @@
     text-decoration-color: red;
 }
 
-.header .menu .menubar ul li:hover{
-    background-color: green;
-}
-
 @media (max-width: 576px) {
   .header {
     height: 5%;
@@ -192,7 +188,9 @@
     padding: 5% 0;
   }
 
-  
+  .header .menu .menubar ul li a{
+    font-size: 1rem;
+  }
   
   .header .menu .menubar ul li .submenu {
     position: absolute;
